Fix Dark Mode bug (white text on white background)

--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -30,7 +30,7 @@
 
 body
     direction: rtl
-    background: #eee
+    // background: #eee
 
 iframe
     max-width: 100%
@@ -98,7 +98,7 @@ footer.nav_footer div.nav_parent
 .nav_icon:hover
     .nav_sub
         display: block
-        background: white
+        // background: white
         height: auto
         color: transparent
         width: max-content
@@ -112,7 +112,7 @@ footer.nav_footer div.nav_parent
     display: unset
 
 div.nav_parent a.nav_item:hover
-    background-color: grey
+    // background-color: grey
     transition: all 0.3s ease-in-out
 
 .nav_item_title
@@ -154,14 +154,14 @@ p
 .posts
     width: 80%
     margin-bottom: 30px
-    background: #eeeeee
+    // background: #eeeeee
     float: left
     margin-right: auto
 
 .post_content
     width: 80%
     margin-bottom: 30px
-    background: #fff
+    // background: #fff
     float: left
     margin-right: auto
     padding: 20px
@@ -174,11 +174,11 @@ p
 .sidebar_inner
     padding: 3.994%
     margin-bottom: 30px
-    background: unset !important
+    // background: unset !important
 
 .widget
     margin-bottom: 2em
-    background: white
+    // background: white
     padding: 5px 20px 20px 20px
     box-shadow: 0 0 10px 10px rgba(50,50,50,0.1)
     word-break: break-word
@@ -189,7 +189,7 @@ p
 
 .sidebar_inner::before
     left: unset
-    background: unset
+    // background: unset
 
 .search_results
     overflow: unset
@@ -274,41 +274,6 @@ a.post_category
     font-size: 1.2rem
     padding: 0.1rem 0.6rem
 
-#bskyfeed_container
-    overflow-y: scroll
-    height: auto
-    scroll-behavior: smooth
-    scroll-margin-left: 10px
-
-.bskypost
-    padding: 0.5rem
-    border-top-style: solid
-    border-top-width: 2px
-    border-top-color: #d7cccc
-
-.bskypost:hover
-    cursor: pointer
-    background-color: rgba(124, 124, 124, 0.2)
-    transition: 0.2s
-
-.bskypost_author
-    direction: ltr
-    text-align: left
-    font-weight: bold
-    color: rgb(0, 133, 255)
-
-.bskypost_time
-    direction: ltr
-    font-size: smaller
-    text-align: left
-    color: rgb(141, 143, 151)
-    padding-bottom: 0.5em
-
-div.bskypost_description
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-    font-size: initial
-    color: black
-
 .nextprev
     display: block
     font-family: serif
@@ -323,7 +288,7 @@ div.bskypost_description
     float: left
 
 hr
-    background: #a49e9e
+    // background: #a49e9e
 
 .loading
     text-align: center
@@ -377,7 +342,7 @@ div.relatedPost a
 
 .highlight_wrap
     display: grid
-    background: #f5f5f5 !important
+    // background: #f5f5f5 !important
     border: 1px solid #ccc
     border-radius: 4px
 
@@ -388,7 +353,7 @@ code.language-fallback span.line span.ln
     color: #333 !important
 
 blockquote
-    background: #e3e3e3
+    // background: #e3e3e3
 
 div.gc-counter
     color: #b2c1c9
